--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
-Hugues Cassé <hugues.casse@laposte.net>
-http://casse.hugues.free.fr
+Hugues Cassé <casse@irit.fr>
+http://www.irit.fr/recherches/ARCHI/MARCH/rubrique.php3?id_rubrique=61
 Developed at IRIT, univ Paul Sabatier, Toulouse, France.
 http://www.irit.fr
-
