--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-04 casse	<casse@irit.fr>
+Fixed bu in byte-code executable compilation preventing the CMO to be linked.
+Fixed INSTALL file.
+
 2006-02-13 casse    <casse@irit.fr>
 [VERSION 3.2]
 
