--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-04-01 casse	<casse@irit.fr>
+Fixed bug preventing to parser "typedef TYPE (const|volatile) ...".
+
 2007-10-23 casse	<casse@irit.fr>
 [VERSION 3.4]
 Calipso project included in FrontC.
